Stop the buttons from jumping around

--- a/src/app/dice-roller/dice-roller.component.css
+++ b/src/app/dice-roller/dice-roller.component.css
@@ -9,6 +9,8 @@
 
 .dice {
   margin-bottom: 20px;
+  height: 40px;
+  line-height: 40px;
   font-size: 40px;
 }
 
